// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthorityMissing /> should display spinner when sending request 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      No Certificate Authority
    </h2>
    <p>
      Currently, there is no certificate authority (CA) dedicated to remote access. A CA is required to generate access tokens to authenticate. To proceed, you need to generate it first.
    </p>
    <div
      class="text-end"
    >
      <button
        class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        type="button"
      >
        <span
          aria-hidden="true"
          class="spinner-border spinner-border-sm me-1"
          role="status"
        />
        <span>
          Generate Certificate Authority
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<AuthorityMissing /> should match snapshot 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      No Certificate Authority
    </h2>
    <p>
      Currently, there is no certificate authority (CA) dedicated to remote access. A CA is required to generate access tokens to authenticate. To proceed, you need to generate it first.
    </p>
    <div
      class="text-end"
    >
      <button
        class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        type="button"
      >
        <span>
          Generate Certificate Authority
        </span>
      </button>
    </div>
  </div>
</div>
`;
